--- a/index.html
+++ b/index.html
@@ -1,11 +1,132 @@
+<!-- index.html -->
+
+
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Systems Engineer Portfolio</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
 </head>
+
 <body>
-    <h1>Joaquin Berrio</h1>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        <a class="navbar-brand" href="#">Systems Engineer</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+            <span class="navbar-toggler-icon"></span>
+
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            <ul class="navbar-nav mr-auto">
+
+                <li class="nav-item active">
+
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+
+                </li>
+
+                <li class="nav-item">
+
+                    <a class="nav-link" href="#">About</a>
+
+                </li>
+
+                <li class="nav-item">
+
+                    <a class="nav-link" href="#">Portfolio</a>
+
+                </li>
+
+                <li class="nav-item">
+
+                    <a class="nav-link" href="#">Contact</a>
+
+                </li>
+
+            </ul>
+
+        </div>
+
+    </nav>
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-md-12">
+
+                <h1>Systems Engineer Portfolio</h1>
+
+                <p>Welcome to my portfolio! I'm a systems engineer with a passion for YouTube.</p>
+
+            </div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-4">
+
+                <h2>About Me</h2>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+
+            </div>
+
+            <div class="col-md-4">
+
+                <h2>Skills</h2>
+
+                <ul>
+
+                    <li>Systems engineering</li>
+
+                    <li>YouTube content creation</li>
+
+                    <li>Cloud computing</li>
+
+                </ul>
+
+            </div>
+
+            <div class="col-md-4">
+
+                <h2>Portfolio</h2>
+
+                <ul>
+
+                    <li><a href="#">Project 11</a></li>
+
+                    <li><a href="#">Project 2</a></li>
+
+                    <li><a href="#">Project 3</a></li>
+
+                </ul>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
