--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Curriculum Vitae - Angel Berrio</title>
+  <title>Angel Berrio - Resume</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -66,7 +66,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Angel Joaquin Berrio Luque</h2>
-            <p>Soy <span class="typed" data-typed-items="Ingeniero de Sistemas, Especialista en Soporte de Aplicaciones, Desarrollador">Ingeniero de Sistemas</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>Soy <span class="typed" data-typed-items="Ingeniero de Sistemas Colegiado, Especialista en Soporte de Aplicaciones, Desarrollador Backend">Ingeniero de Sistemas</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <!--<a href="#"><i class="bi bi-twitter-x"></i></a>-->
               <a href="#"><i class="bi bi-linkedin"></i></a>
