--- a/index.html
+++ b/index.html
@@ -339,14 +339,31 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Sub Jefe de IT Operaciones</h4>
+              <h5>Ago 2019 - Dic 2022</h5>
+              <p><em>Viettel Perú S.A.C, Presencial, Lima, Perú</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Sub jefe del departamento de TI cuya misión es la de supervisar y controlar la operatividad de los sistemas de BSS
+                  (Business Support System) y OSS (Operation Support System), participación activa en los comités técnicos para nuevas
+                  implementación y requerimientos por solicitud de las otras áreas.</li>
+                <li>Participar en el War Room frente incidentes en ambientes de producción.</li>
+                <li>Evaluación, seguimiento, asesoría a las aplicaciones TI y lograr que cumplan con los controles necesarios antes de su
+                  salida a producción.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Analista de Aplicaciones</h4>
+              <h5>Abr 2018 - Jul 2019</h5>
+              <p><em>Viettel Perú S.A.C, Presencial, Lima, Perú</em></p>
+              <ul>
+                <li>Analista de aplicaciones, monitoreo y control de los Sistemas Operativos Linux en sus distintas distribuciones y Windows
+                  Server 2012 R2, operación de la base de datos relacional Oracle y MySQL y no Relacional MongoDB, mantenimiento y
+                  actualizaciones de servicios Apache Web, Java, creación de scripts para automatización.</li>
+                <li>Implementar de nuevos módulos para la alta disponibilidad, configuración de Load Balance.</li>
+                <li>Diseño e implementación de la Estructura de la Base de Datos y Diccionario de datos, creación de Procedimientosalmacenados y paquetes, triggers, secuencias.</li>
+                <li>Gestión de logs de datos. Creación de ficheros, folders y archivos batchs.</li> 
+                <li>Documentación de las implementaciones, gestión de Solicitudes de Cambio y Actualizaciones.</li>  
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -363,8 +380,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Portafolio</h2>
+        <p>Principales Proyectos de implementación</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -372,9 +389,9 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-product">Card</li>
+            <li data-filter="*" class="filter-active">TODOS</li>
+            <li data-filter=".filter-app">WEBAPPS</li>
+            <li data-filter=".filter-product">APLICACIONES</li>
             <li data-filter=".filter-branding">Web</li>
           </ul><!-- End Portfolio Filters -->
 
@@ -383,8 +400,10 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <h4>App Banking</h4>
+                <p>Implementación del sistema "Banking" posibilita la conexión física y lógica con entidades financieras a través de
+                  Webservices independientes por entidad. Facilita a millones de usuarios de Bitel recargar y pagar servicios móviles e
+                  internet a través de diversos canales financieros como bancos, cajas municipales y puntos virtuales.</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -393,8 +412,11 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Product 1</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <h4>Sistema de conciliación</h4>
+                <p>Sistema de conciliación automatiza el proceso de pago de comisiones a entidades aliadas. Utiliza procedimientos
+                  almacenados y un dashboard para generar indicadores de toma de decisiones. La implementación redujo
+                  considerablemente los tiempos de conciliación y permitió establecer estrategias comerciales más efectivas con socios
+                  de mejores indicadores en comisiones.</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -403,8 +425,11 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Branding 1</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <h4>Proyecto Renteseg</h4>
+                <p>Encargado de implementar la segunda y tercera fase del proyecto Renteseg, integrando las plataformas de BITEL y
+                  OSIPTEL mediante el intercambio automatizado de archivos encriptados. Impulsado por el equipo técnico y legal de
+                  OSIPTEL, la implementación facilitó compartir la Base de Datos de Registro de Abonados de BITEL y la de equipos
+                  robados, bloqueados y liberados de forma automatizada.</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -413,8 +438,11 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <h4>ServiceDesk & OpManager</h4>
+                <p>Implementación del sistema ServiceDesk & OpManager para gestión de incidentes y monitoreo de red en clientes
+                  corporativos del sector privado y público. Trabajo colaborativo con el partner MangaEngine, basado en análisis de
+                  términos técnicos del cliente y diseño de un plan conjunto. Estas implementaciones fortalecieron la reputación de
+                  servicio de Bitel, cumpliendo términos de referencia y atrayendo proyectos significativos en el sector público</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
