--- a/index.html
+++ b/index.html
@@ -65,13 +65,22 @@
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
-            <h2>Angel Joaquin Berrio Luque</h2>
-            <p>Soy <span class="typed" data-typed-items="Ingeniero de Sistemas Colegiado, Especialista en Soporte de Aplicaciones, Desarrollador Backend">Ingeniero de Sistemas</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-            <div class="social-links">
+            <p>Hola,</p>
+            <h2>Soy Angel Berrio.</h2>
+            <p><span class="typed" data-typed-items="Ingeniero de Sistemas Colegiado, Especialista en Soporte de Aplicaciones, Desarrollador Backend">Ingeniero de Sistemas</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <!-- <div class="social-links"> -->
               <!--<a href="#"><i class="bi bi-twitter-x"></i></a>-->
-              <a href="#"><i class="bi bi-linkedin"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
+              <!-- <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.facebook.com/AJBL08"><i class="bi bi-facebook"></i></a>
               <a href="#"><i class="bi bi-instagram"></i></a>
+            </div> -->
+            <div class="Button_Contact">
+              <a href="https://api.whatsapp.com/send?phone=+51922535379&text=Hola!%20Quiero%20contactarte" target="_blank">
+                <button type="submit">Contactamé</button>              
+              </a>  
+              <a href="assets/pdf/Resume_Angel_Berrio.pdf" download="Resume_Angel_Berrio.pdf">
+                <button type="submit">Descargar CV</button>              
+              </a>
             </div>
           </div>
         </div>
@@ -190,32 +199,109 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>Linux/Windows Server</span> <i class="val">100%</i></span>
+              <span class="skill"><span>Linux/Windows Server</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Oracle/SQL Server</span> <i class="val">90%</i></span>
+              <span class="skill"><span>Oracle/SQL Server</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Weblogic</span> <i class="val">75%</i></span>
+              <span class="skill"><span>Network Protocols</span> <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Java</span> <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Jira</span> <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Docker</span> <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Confluence</span> <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Kibana</span> <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item --> 
 
           </div>
 
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>Innovacion y creatividad</span> <i class="val">80%</i></span>
+              <span class="skill"><span>Innovación y creatividad</span> <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Perfil resolutivo</span> <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Capacidad analítica</span> <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>PL/SQL</span> <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Agile SAFe</span> <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Unix Scripting</span> <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Weblogic</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -228,12 +314,6 @@
               </div>
             </div><!-- End Skills Item -->
 
-            <div class="progress">
-              <span class="skill"><span>Kibana</span> <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
 
           </div>
 
@@ -266,7 +346,7 @@
 
             <div class="resume-item pb-0">
               <h4>Ing. Angel Berrio CIP 307126</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Ingeniero de Sistemas en Prosegur, con 7+ años en TI y experiencia en telecomunicaciones, logística, seguros y retail. Especializado en soporte técnico, proyectos estratégicos, gestión y transformación digital con enfoque en innovación empresarial.</em></p>
               <ul>
                 <li>Av. Paseo de la República 2199, Lima, Perú</li>
                 <li>+51 922535379</li>
@@ -833,12 +913,12 @@
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <!-- <h3 class="sitename">Brandon Johnson</h3>
+      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
       <div class="social-links d-flex justify-content-center">
         <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
         <a href=""><i class="bi bi-linkedin"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/AJBL08"><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
         <a href=""><i class="bi bi-skype"></i></a>
       </div>
