--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Angel Berrio - Resume</title>
+  <title>Angel Berrio - Portafolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -78,7 +78,7 @@
               <a href="https://api.whatsapp.com/send?phone=+51922535379&text=Hola!%20Quiero%20contactarte" target="_blank">
                 <button type="submit">Contactamé</button>              
               </a>  
-              <a href="assets/pdf/Resume_Angel_Berrio.pdf" download="Resume_Angel_Berrio.pdf">
+              <a href="assets/pdf/Resume_Angel_Berrio.pdf" download="Resume_Angel_Berrio.pdf" target="_blank">
                 <button type="submit">Descargar CV</button>              
               </a>
             </div>
@@ -104,16 +104,15 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
+            <h2>Desarrollador Backend &amp; Especialista en soporte de Aplicaciones.</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Experto en resolver problemas complejos, manteniendo y mejorando las aplicaciones creando valor enfocado al negocio.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>08 de octubre 1989</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.yacode.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Teléfono:</strong> <span>+51 922535379</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Lima, Perú</span></li>
                 </ul>
@@ -121,7 +120,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>34</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Git</strong> <span>GitHub</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Git:</strong> <span>GitHub</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Correo Electrónico:</strong> <span>angeljoaquin.berrioluque@outlook.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponible</span></li>
                 </ul>
@@ -837,14 +836,14 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contacto</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Siempre estoy preparado y dispuesto a atender sus necesidades y solicitudes. No dude en comunicarse conmigo.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade" data-aos-delay="100">
 
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
 
-          <div class="col-lg-4">
+          <div class="infodata"> 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
@@ -857,21 +856,25 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Teléfono:</h3>
+                <a href="tel:+51 922535379">
                 <p>+51 922535379</p>
-              </div>
+              </a>
+              </div> 
             </div><!-- End Info Item -->
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email:</h3>
-                <p>angeljoaquin.berrioluque@outlook.com</p>
+                <a href="mailto:angeljoaquin.berrioluque@outlook.com">
+                  <p>angeljoaquin.berrioluque@outlook.com</p>
+                </a>
               </div>
             </div><!-- End Info Item -->
 
           </div>
 
-          <div class="col-lg-8">
+          <!-- <div class="col-lg-8">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
@@ -901,7 +904,7 @@
 
               </div>
             </form>
-          </div><!-- End Contact Form -->
+          </div>End Contact Form -->
 
         </div>
 
@@ -917,10 +920,10 @@
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
       <div class="social-links d-flex justify-content-center">
         <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
-        <a href=""><i class="bi bi-linkedin"></i></a>
-        <a href="https://www.facebook.com/AJBL08"><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
+        <a href="https://www.linkedin.com/in/angelberrio/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.facebook.com/AJBL08" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/joaquiiin_____/?igsh=MTBjYWtibGgzYmg0Mg%3D%3D" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://join.skype.com/invite/gYNGfPNi4vcW" target="_blank"><i class="bi bi-skype"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
