update portafolio web

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - MyResume Bootstrap Template</title>
+  <title>Angel Berrio - Detalles del Portafolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -45,11 +45,11 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="#hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i><span>Acerca de mi</span></a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resumen</span></a></li>
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portafolio</span></a></li>
+        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Servicios</span></a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contacto</span></a></li>
       </ul>
     </nav>
 
@@ -63,10 +63,10 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Portfolio Details</li>
+            <li class="current">Detalles del Portafolio</li>
           </ol>
         </nav>
-        <h1>Portfolio Details</h1>
+        <h1>Detalles del Portafolio</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -157,13 +157,13 @@
 
           <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Informacion del Proyecto</h3>
               <ul>
-                <li><strong>Category</strong> Web design</li>
-                <li><strong>Client</strong> ASU Company</li>
-                <li><strong>Project date</strong> 01 March, 2020</li>
-                <li><strong>Project URL</strong> <a href="#">www.example.com</a></li>
-                <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
+                <li><strong>Categoria:</strong> Web design</li>
+                <li><strong>Cliente:</strong> ASU Company</li>
+                <li><strong>Fecha del Proyecto:</strong> 01 March, 2020</li>
+                <li><strong>URL:</strong> <a href="#">www.example.com</a></li>
+                <!-- <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li> -->
               </ul>
             </div>
           </div>
@@ -178,25 +178,25 @@
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <!-- <h3 class="sitename">Brandon Johnson</h3>
+      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
+        <a href="https://www.linkedin.com/in/angelberrio/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.facebook.com/AJBL08" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/joaquiiin_____/?igsh=MTBjYWtibGgzYmg0Mg%3D%3D" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://join.skype.com/invite/gYNGfPNi4vcW" target="_blank"><i class="bi bi-skype"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Alex Smith</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">Yacode</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you've purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Designed by <a href="https://yacode.com/">Yacode</a>
         </div>
       </div>
     </div>
